
bin_PROGRAMS = cclient

#
#  NCurses Client Target
#
cclient_SOURCES = \
	src/client/main_curses.cpp \
	src/client/cursesscreen.cpp \
	src/client/cursesinput.cpp \
	src/client/curseswindow.cpp \
	src/client/mapwindow.cpp \
	src/client/menuwindow.cpp \
	src/client/settings.cpp \
\
	src/client/cursesscreen.h \
	src/client/cursesinput.h \
	src/client/curseswindow.h \
	src/client/mapwindow.h \
	src/client/menuwindow.h \
	src/client/settings.h

cclient_LDADD = $(NCURSESLIB)
